--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,8 +11,35 @@ h2{
 }
 h1{
   font-size: 1.4rem;
-  /* padding: 1rem; */
+  padding: 1rem;
 }
 .rating span {
   margin: 0.1rem;
+}
+
+/* carousel */
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active{
+  display: flex;
+}
+.carousel-caption {
+  position: absolute;
+  top: 0;
+}
+
+.carousel-caption h2 {
+  color: #fff;
+  font-size: 1rem;
+}
+
+.carousel img{
+  height: 300px;
+  padding: 30px;
+  margin: 40px;
+  border-radius: 50%;
+}
+
+.carousel a {
+  margin: 0 auto;
 }
